--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ var _hmt = _hmt || [];
   <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id:"3F2aD4CXXYlC2ebC",ck:"3F2aD4CXXYlC2ebC"})</script>
- <meta http-equiv="Refresh" content="0; URL=https://www.vultr.com/?ref=9439551" />
+ <meta http-equiv="Refresh" content="0; URL=https://www.siteground.com/index.htm?afcode=d60b3953f71a58cd2d6aced503c7ccf7" />
     <title>sitegrou.com: sitegrou</title>
  
  
