--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@
 <html>
 
 <head>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?75c8a5f85ca6865e5d4b0382a0088fc0";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+
   <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id:"3F2aD4CXXYlC2ebC",ck:"3F2aD4CXXYlC2ebC"})</script>
- <meta http-equiv="Refresh" content="0; URL=https://www.siteground.com/index.htm?afcode=d60b3953f71a58cd2d6aced503c7ccf7" />
+ <meta http-equiv="Refresh" content="0; URL=https://amzn.to/3xHpcVN" />
     <title>sitegrou.com: sitegrou</title>
  
  
